<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_constraint_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgv_avatar"
            android:layout_width="@dimen/avatar_big_size"
            android:layout_height="@dimen/avatar_big_size"
            tools:src="@drawable/ic_terrain" />

        <TextView
            android:id="@+id/tv_display_name"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_half_margin"
            android:textStyle="bold"
            tools:text="Hing Tang" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="108dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="@id/top_constraint_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_constraint_layout">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following" />

                <TextView
                    android:id="@+id/tv_following"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    tools:text="10" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follower" />

                <TextView
                    android:id="@+id/tv_followers"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    tools:text="10" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/public_repos" />

                <TextView
                    android:id="@+id/tv_public_repos"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    tools:text="10" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="@id/card_view"
        app:layout_constraintStart_toStartOf="@id/card_view"
        app:layout_constraintTop_toBottomOf="@id/card_view">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/login_name" />

            <TextView
                android:id="@+id/tv_login_name"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_weight="1"
                tools:text="hing.tang" />
        </TableRow>

        <TableRow
            android:id="@+id/bio_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:orientation="horizontal">

            <TextView
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/bio" />

            <TextView
                android:id="@+id/tv_bio"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_weight="1"
                tools:text="This is the bio" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:orientation="horizontal">

            <TextView
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/github_html" />

            <TextView
                android:id="@+id/tv_github_html"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_weight="1"
                tools:text="https://github.com/hingtang1115" />
        </TableRow>
    </TableLayout>

    <FrameLayout
        android:id="@+id/progress_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
